--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -42,10 +42,10 @@ android {
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId "com.example.musicplayer"
+        applicationId "com.mominaamir.musicplayer"
         // You can update the following values to match your application needs.
         // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-gradle-build-configuration.
-        minSdkVersion flutter.minSdkVersion
+        minSdkVersion 21
         targetSdkVersion flutter.targetSdkVersion
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
@@ -65,4 +65,5 @@ flutter {
 }
 
 dependencies {
+    implementation 'com.google.android.gms:play-services-ads:21.0.0'
 }
