--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -5,48 +5,56 @@
     <uses-permission android:name="android.permission.READ_MEDIA_AUDIO"/>
 
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
     <uses-permission android:name="android.permission.WAKE_LOCK"/>
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE_MEDIA_PLAYBACK"/>
 
-    <application
-        android:label="musicplayer"
+      <application
+        android:label="Harmony"
         android:name="${applicationName}"
-        android:icon="@mipmap/ic_launcher">
-              <activity
-           android:name="com.ryanheise.audioservice.AudioServiceActivity"
-           android:launchMode="singleTop"
-           android:theme="@style/LaunchTheme"
-           android:configChanges="orientation|keyboardHidden|keyboard|screenSize|locale|layoutDirection|fontScale|screenLayout|density|uiMode"
-           android:hardwareAccelerated="true"
-           android:windowSoftInputMode="adjustResize"
-           android:exported="true">
-           <intent-filter>
-               <action android:name="android.intent.action.MAIN"/>
-               <category android:name="android.intent.category.LAUNCHER"/>
-           </intent-filter>
-       </activity>
+        android:icon="@mipmap/launcher_icon">
 
-       <service
-           android:name="com.ryanheise.audioservice.AudioService"
-           android:foregroundServiceType="mediaPlayback"
-           android:exported="true">
-           <intent-filter>
-               <action android:name="android.media.browse.MediaBrowserService" />
-           </intent-filter>
-       </service>
+        <activity
+            android:name="com.ryanheise.audioservice.AudioServiceActivity"
+            android:launchMode="singleTop"
+            android:theme="@style/LaunchTheme"
+            android:configChanges="orientation|keyboardHidden|keyboard|screenSize|locale|layoutDirection|fontScale|screenLayout|density|uiMode"
+            android:hardwareAccelerated="true"
+            android:windowSoftInputMode="adjustResize"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN"/>
+                <category android:name="android.intent.category.LAUNCHER"/>
+            </intent-filter>
+        </activity>
 
-       <receiver
-           android:name="com.ryanheise.audioservice.MediaButtonReceiver"
-           android:exported="true">
-           <intent-filter>
-               <action android:name="android.intent.action.MEDIA_BUTTON" />
-           </intent-filter>
-       </receiver>
+        <service
+            android:name="com.ryanheise.audioservice.AudioService"
+            android:foregroundServiceType="mediaPlayback"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.media.browse.MediaBrowserService" />
+            </intent-filter>
+        </service>
 
-       <meta-data
-           android:name="flutterEmbedding"
-           android:value="2" />
-   </application>
+        <receiver
+            android:name="com.ryanheise.audioservice.MediaButtonReceiver"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MEDIA_BUTTON" />
+            </intent-filter>
+        </receiver> 
+
+        <meta-data
+            android:name="flutterEmbedding"
+            android:value="2" />
+        
+        <meta-data
+            android:name="com.google.android.gms.ads.APPLICATION_ID"
+            android:value="ca-app-pub-8795845763985826~5181999638" />
+    </application>
 </manifest>
