--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,18 +47,42 @@ dependencies:
   smooth_page_indicator: ^1.1.0
   carousel_slider: ^4.2.1
 
-  cloud_firestore: ^4.17.3
-  firebase_storage: ^11.7.5
-  firebase_core: ^2.31.0
-  firebase_auth: ^4.19.5
+  google_mobile_ads: ^5.1.0
+
+  cloud_firestore: ^4.17.4
+  firebase_storage: ^11.7.6
+  firebase_core: ^2.31.1
+  firebase_auth: ^4.19.6
   audioplayers: ^6.0.0
+  flutter_downloader: ^1.11.7
 
   provider: ^6.1.2
   firebase_database: ^10.5.5
+  flutter_local_notifications: ^17.1.2
+
+  
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_launcher_icons: ^0.13.1
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "icons/icon.png"
+  min_sdk_android: 21 # android min sdk min:16, default 21
+  web:
+    generate: true
+    image_path: "icons/icon.png"
+    background_color: "#hexcode"
+    theme_color: "#hexcode"
+  windows:
+    generate: true
+    image_path: "icons/icon.png"
+    icon_size: 48 # min:48, max:256, default: 48
+  macos:
+    generate: true
+    image_path: "icons/icon.png"
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
