--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -69,20 +69,20 @@ dev_dependencies:
 flutter_launcher_icons:
   android: "launcher_icon"
   ios: true
-  image_path: "icons/icon.png"
+  image_path: "icons/icon1.png"
   min_sdk_android: 21 # android min sdk min:16, default 21
   web:
     generate: true
-    image_path: "icons/icon.png"
+    image_path: "icons/icon1.png"
     background_color: "#hexcode"
     theme_color: "#hexcode"
   windows:
     generate: true
-    image_path: "icons/icon.png"
-    icon_size: 48 # min:48, max:256, default: 48
+    image_path: "icons/icon1.png"
+    icon_size: 60 # min:48, max:256, default: 48
   macos:
     generate: true
-    image_path: "icons/icon.png"
+    image_path: "icons/icon1.png"
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
